@@ -61,6 +61,8 @@ The rules for this file:
   * dependent on Biopython >= 1.59 (Issue 147)
   * Hydrogen bond analysis defaults to updating selection 1 and 2 for
     every timestep in order to avoid unexpected behavior (Issue 138)
+  * AtomGroup.velocities is now a (managed) attribute and not a method
+    anymore: replace 'ag.velocities()' with 'ag.velocities'
 
   Fixes
 
